Fixed text alignment on narrow devices

--- a/src/App.css
+++ b/src/App.css
@@ -205,6 +205,7 @@ div, p, span, img, a, ul, h1, h2, h3, h4, h5, h6 {
 #further-info .contact {
   color: white;
   margin: 20px;
+  text-align: center;
 }
 
 #nav {
